# ucip

./: .env.example  .gitignore  Dockerfile  Dockerfile.simple  GITHUB_AUTH_SETUP.md  INITIAL.md  README.md  app-simple.py  digittalocen  digittalocen.pub  docker-compose.dev.yml  docker-compose.yml  package-lock.json  playwright.config.js  pyproject.toml  requirements.txt
.claude/: settings.local.json
.do/: app.yaml
.github/workflows/: deploy.yml  deploy.yml.bak
PRPs/: universal-consultant-intelligence-platform-comprehensive.md  universal-consultant-intelligence-platform-enhanced.md  universal-consultant-intelligence-platform.md
backend/api/: dependencies.py  main.py
backend/api/routes/: campaigns.py  consultants.py  prospects.py  reports.py  research.py
backend/core/: config.py  database.py  logging.py  monitoring.py
backend/models/database/: campaign.py  consultant.py  prospect.py  research.py
backend/models/schemas/: consultant.py
backend/services/: __init__.py  openai_service.py  report_service.py  scraping_service.py
backend/utils/: exceptions.py
docker/: entrypoint.sh
frontend/src/: app.js  index.html
frontend/src/styles/: main.css
nginx/: nginx.conf
nginx/conf.d/: default.conf
research/beautifulsoup/: 01-overview.md  02-advanced-features.md
research/fastapi/: 01-tutorial-overview.md  02-dependency-injection.md  03-background-tasks.md  04-sql-databases.md  05-advanced-security.md  06-middleware.md  07-error-handling.md  08-async-programming.md  09-file-uploads.md  10-testing.md
research/openai/: 01-chat-completions.md  02-function-calling.md  03-rate-limits.md  04-production-best-practices.md
research/pandas/: 01-user-guide-overview.md  02-io-operations.md  03-text-processing.md
research/reportlab/: 01-overview.md
research/typescript/: 01-basics.md  02-advanced-types.md
scripts/: build.sh  deploy-digitalocean.sh  setup-github-auth.sh
static-demo/: dashboard.html  index.html
tests/: bbc-test.js  bbc-test.spec.js
tests/e2e/: api.spec.js  dashboard.spec.js
